# research-qianli-v2

./: .gitignore  .mcp.json  CLAUDE.md  CODE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  verify_split.py
.claude/: ftr-trader.md  ml-engineer.md  python-expert.md  settings.json
.serena/: project.yml
competitor-banding-analysis/: mem.md
document/: GETTING_STARTED.md  README.md  anomaly_detection_improvements.md  dynamic_threshold_optimization_plan.md  horizon_stratified_ensemble_implementation.md  miso_shadow_price_implementation_plan.md  multi_period_migration_guide.md  param_search_result_compatibility.md  shadow_price_fixes.md  shadow_price_prediction_research_plan.md  synthetic_data_augmentation_plan.md  test_branch_training_optimization.md
examples/: build_dataset_example.py
hard-sell/: mem.md  miso_sell.py  run_pipeline.py  run_pipeline_v2.py  run_pipeline_v3.py
notebook/: extract_best_model.py  main.ipynb  param_search.ipynb  param_search_result.ipynb
notebook/.ipynb_checkpoints/: param_search-checkpoint.ipynb
notebook/hz/: test.ipynb  test_monthly.ipynb
research-annual/: mem.md  runbook.md
research-annual-band/: CLAUDE.md  INDEX.md  README.md  human-input.md  task_plan.md  task_plan_review.md
research-annual-band/archive/: learning.md
research-annual-band/docs/: prod-port.md  v10-consolidation-report.md  v11-dev-results-report.md  v9-dev-results-report.md
research-annual-band/miso/: mem.md  segment_analysis.md  sign_segment_analysis.json
research-annual-band/pjm/: README.md  knowledge.md  plan.md
research-annual-band/scripts/: analyze_cell_sizes.py  investigate_sign_split.py  run_aq4_experiment.py  run_phase3_bands.py  run_v9_bands.py  test_sign_split_calibration.py  test_v9_bands.py
research-annual-signal/: .gitignore  audit.md  experiment-setup.md  mem.md  runbook.md
research-annual-signal-dz/docs/: data-discovery-report.md
research-annual-signal-pjm/: CLAUDE.md  INDEX.md
research-annual-signal-pjm/docs/: agents.md  baseline-benchmark-results.md  phase0-pjm-base-grain-contract.md  phase1-coverage-report.md  phase1-data-source-contract.md  pjm-7.0b-publication-checklist.md  pjm-annual-publication-contract.md  pjm-annual-signal-implementation-plan.md  pjm-metric-reporting-contract.md  pjm-reconstruction-charter.md
research-annual-signal-pjm/human-input/: 2026-03-25-pjm-handoff.md  mem.md  pjm-spice-signal-annual.ipynb
research-annual-signal-pjm/ml/: __init__.py
research-annual-signal-pjm/scripts/: audit_coverage.py  dry_run_publish_pjm_7_0b.py  gt_mapping_coverage.py  gt_recovery_sweep.py  smoke_test_multi_cell.py  sweep_all_ctypes.py  universe_coverage.py
research-annual-signal-v2/: README.md
research-annual-signal-v2/docs/: 2026-03-18-data-quality-audit.md  2026-03-20-coverage-investigation-handoff.md  2026-03-23-nb-model-experiment-report.md  2026-03-23-nb-v2-experiment-report.md  2026-03-23-nb-v3-final-report.md  2026-03-24-bucket-model-report.md  2026-03-24-master-tracker.md  2026-03-24-nb-next-step-plan.md  2026-03-24-post-7.1b-next-steps.md  2026-03-24-repo-migration-plan.md  2026-03-24-repo-reformulation-and-round-sensitive-annual-design.md  2026-03-24-round-modeling-handoff-note.md  2026-03-24-round-sensitive-annual-test-design.md  2026-03-24-v44-like-rebuild-from-our-data.md  2026-03-24-v44-like-rebuild-implementation-checklist.md  2026-03-24-v44-notebook-gap-analysis.md  2026-03-25-7.2b-checklists.md  2026-03-25-7.2b-design-and-implementation-plan.md  2026-03-25-7.2b-publication-checklist-and-manifest.md  2026-03-25-7.2b-publication-implementation-plan.md  coverage-analysis-runbook.md  implementer-guide.md  metric-contract.md  model-comparison-report.md  pipeline-and-production-port.md  repo-reorg-plan.md  supplement-matching-implementation-plan.md  test-specification.md
research-annual-signal-v2/human-inputs/: mem.md
research-annual-signal-v2/ml/: bridge.py  config.py  data_loader.py  evaluate.py  features.py  features_trackb.py  ground_truth.py  history_features.py  merge.py  nb_detection.py  realized_da.py  registry.py  signal_publisher.py  train.py
research-annual-signal-v2/registry/: baseline_contract.json
research-annual-signal-v2/reviews/: 2026-03-12-docs-implementation-audit.md
research-annual-signal-v2/scripts/: analyze_round_comparison.py  calibrate_threshold.py  champion_confirmation.py  fetch_realized_da.py  fetch_realized_da_daily.py  golden_slice_parity.py  nb_experiment_v2.py  nb_feature_ablation.py  nb_model_experiment.py  nb_model_yearly.py  nb_native_comparison.py  nb_v3_ablation.py  publish_annual_signal.py  round_comparison.py  run_72b_full_grid.py  run_ml_diagnostics.py  run_ml_experiment.py  run_nb_supplement.py  run_phase5_reeval.py  run_two_track_experiment.py  v7_mapping_tables.py  v7_step1_sanity.py  verify_base_nondeterminism.py
research-annual-signal-v2/tests/: conftest.py  test_72b_publication.py  test_bridge.py  test_config.py  test_data_loader.py  test_evaluate.py  test_features.py  test_ground_truth.py  test_history_features.py  test_integration.py  test_merge.py  test_nb_detection.py  test_nb_experiment_v2.py  test_registry.py  test_round_sensitive_pipeline.py  (+2 more)
research-first-month-banding-pjm/: DESIGN_V3_BANDING.md  INTEGRATION_GUIDE.md
research-first-monthly-pjm/: SUMMARY.md
research-miso-signal7/: README.md
research-pjm-signal-f0p-0/: CLAUDE.md
research-pjm-signal-f0p-1/: CLAUDE.md
research-pjm-stage0-tier/: handoff-claude.md  handoff-codex.md
research-spice-shadow-price-pred/: .pre-commit-config.yaml
research-stage1-shadow/: .gitignore  CLAUDE.md  runbook.md
research-stage3-tier/: runbook.md
research-stage4-tier/: .gitignore  README-from-stage3.md  mem.md  task_plan.md
research-stage5-tier/: .gitignore  CLAUDE.md  audit.md  experiment-setup.md  mem.md  multi-period-extension.md  stage5-handoff.md
research-stage6-tier/: .gitignore  CLAUDE.md  README.md
src/: README.md  build_training_data.py
tests/: test_exposed_models.py  test_threshold_validation.py  verify_horizon_groups.py
(+2420 files in other folders)
