# Project Information
[project]
name = "shadow-price-prediction"
version = "1.0.0"
description = "Shadow price prediction for MISO electricity markets using XGBoost-based two-stage models"
readme = "README.md"
authors = [
    { name = "Engineering Team", email = "consultant@amazand.com" }
]
requires-python = "==3.13.5"

dependencies = [
    "pbase",
    # Core data libraries
    "pandas==2.3.0",
    "numpy==2.2.6",
    "pyarrow==20.0.0",
    # Machine learning
    "xgboost==3.0.2",
    "scikit-learn==1.7.0",
    # Notebook support
    "notebook>=7.4.7",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
# pbase = { git = "https://github.com/xyzpower/pbase", branch = "develop" }
# For local development:
pbase = { path = "../pbase", editable = true }

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package discovery configuration
[tool.hatch.build.targets.wheel]
packages = ["src/shadow_price_prediction"]

# Version control tool configuration
[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/shadow_price_prediction/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# Code quality tool configuration
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "F",        # Pyflakes rules
    "B",        # flake8-bugbear
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
]
ignore = [
    "E501",     # line-too-long
    "N806",     # non-lowercase-variable-in-function
]
exclude = ["notebook/*", "*.ipynb"]

[tool.ruff.lint.isort]
known-first-party = ["shadow_price_prediction", "pbase"]
known-third-party = ["pandas", "numpy", "xgboost", "sklearn"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 110

# Test configuration
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Dependency groups for uv
[dependency-groups]
dev = [
    "plotly>=6.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.1",
]
types = [
    "types-python-dateutil>=2.9.0.20250516",
]
